--- a/heading.html
+++ b/heading.html
@@ -1,6 +1,7 @@
 <html>
-    
+    <header>Branch Page</header>
     <head>
 <title>Project</title></head>
     <body>this have some headings</body>
+    <footer>copyright</footer>
     </html>
